[project]
name = "mcp-demo-server"
version = "0.1.0"
description = "A demo MCP server with tools and resources"
authors = [
    {name = "Demo User", email = "demo@example.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "mcp>=1.11",
    "fastmcp>=0.1.0",
    "opensearch-py>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [] 